--- a/index.html
+++ b/index.html
@@ -33,10 +33,20 @@
 
         <ul class="header-contact-list">
           <li class="item">
-            <a class="nav-link contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="nav-link contact-link" href="mailto:info@devstudio.com">
+              <svg class="contact-link-icon" aria-hidden="true">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
           <li class="item">
-            <a class="nav-link contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="nav-link contact-link" href="tel:+380961111111">
+              <svg class="contact-link-icon smartfone" aria-hidden="true">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -58,6 +68,11 @@
 
           <ul class="advantages-list">
             <li class="advantages-item">
+              <div class="advantages-icon-container">
+                <svg class="advantages-item-icon" aria-label="антенна">
+                  <use href="./images/icons.svg#icon-1-antenna"></use>
+                </svg>
+              </div>
               <h3 class="advantages-item-title">Внимание к деталям</h3>
               <p class="advantages-item-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
@@ -65,6 +80,11 @@
             </li>
 
             <li class="advantages-item">
+              <div class="advantages-icon-container">
+                <svg class="advantages-item-icon" aria-label="циферблат">
+                  <use href="./images/icons.svg#icon-2-clock"></use>
+                </svg>
+              </div>
               <h3 class="advantages-item-title">Пунктуальность</h3>
               <p class="advantages-item-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
@@ -72,6 +92,11 @@
             </li>
 
             <li class="advantages-item">
+              <div class="advantages-icon-container">
+                <svg class="advantages-item-icon" aria-label="диаграмма">
+                  <use href="./images/icons.svg#icon-3-diagram"></use>
+                </svg>
+              </div>
               <h3 class="advantages-item-title">Планирование</h3>
               <p class="advantages-item-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
@@ -79,6 +104,11 @@
             </li>
 
             <li class="advantages-item">
+              <div class="advantages-icon-container">
+                <svg class="advantages-item-icon" aria-label="астронавт">
+                  <use href="./images/icons.svg#icon-4-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="advantages-item-title">Современные технологии</h3>
               <p class="advantages-item-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -134,24 +164,225 @@
               <img src="./images/team/team-1.jpg" alt="Игорь Демьяненко" width="270" height="260" />
               <h3 class="team-item-header">Игорь Демьяненко</h3>
               <p class="team-item-text">Product Designer</p>
+
+              <div class="social-list-container">
+                <ul class="social-list">
+                  <li class="social-link">
+                    <a href="#">
+                      <svg class="social-icon" aria-label="instagram">
+                        <use href="./images/icons.svg#icon-1-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-link">
+                    <a href="#">
+                      <svg class="social-icon" aria-label="twitter">
+                        <use href="./images/icons.svg#icon-2-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-link">
+                    <a href="#">
+                      <svg class="social-icon" aria-label="facebook">
+                        <use href="./images/icons.svg#icon-3-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-link">
+                    <a href="#">
+                      <svg class="social-icon" aria-label="linkedin">
+                        <use href="./images/icons.svg#icon-4-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="team-item">
               <img src="./images/team/team-2.jpg" alt="Ольга Репина" width="270" height="260" />
               <h3 class="team-item-header">Ольга Репина</h3>
               <p class="team-item-text">Frontend Developer</p>
+
+              <div class="social-list-container">
+                <ul class="social-list">
+                  <li class="social-link">
+                    <a href="#">
+                      <svg class="social-icon" aria-label="instagram">
+                        <use href="./images/icons.svg#icon-1-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-link">
+                    <a href="#">
+                      <svg class="social-icon" aria-label="twitter">
+                        <use href="./images/icons.svg#icon-2-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-link">
+                    <a href="#">
+                      <svg class="social-icon" aria-label="facebook">
+                        <use href="./images/icons.svg#icon-3-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-link">
+                    <a href="#">
+                      <svg class="social-icon" aria-label="linkedin">
+                        <use href="./images/icons.svg#icon-4-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="team-item">
               <img src="./images/team/team-3.jpg" alt="Николай Тарасов" width="270" height="260" />
               <h3 class="team-item-header">Николай Тарасов</h3>
               <p class="team-item-text">Marketing</p>
+
+              <div class="social-list-container">
+                <ul class="social-list">
+                  <li class="social-link">
+                    <a href="#">
+                      <svg class="social-icon" aria-label="instagram">
+                        <use href="./images/icons.svg#icon-1-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-link">
+                    <a href="#">
+                      <svg class="social-icon" aria-label="twitter">
+                        <use href="./images/icons.svg#icon-2-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-link">
+                    <a href="#">
+                      <svg class="social-icon" aria-label="facebook">
+                        <use href="./images/icons.svg#icon-3-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-link">
+                    <a href="#">
+                      <svg class="social-icon" aria-label="linkedin">
+                        <use href="./images/icons.svg#icon-4-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="team-item">
               <img src="./images/team/team-4.jpg" alt="Михаил Ермаков" width="270" height="260" />
               <h3 class="team-item-header">Михаил Ермаков</h3>
               <p class="team-item-text">UI Designer</p>
+
+              <div class="social-list-container">
+                <ul class="social-list">
+                  <li class="social-link">
+                    <a href="#">
+                      <svg class="social-icon" aria-label="instagram">
+                        <use href="./images/icons.svg#icon-1-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-link">
+                    <a href="#">
+                      <svg class="social-icon" aria-label="twitter">
+                        <use href="./images/icons.svg#icon-2-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-link">
+                    <a href="#">
+                      <svg class="social-icon" aria-label="facebook">
+                        <use href="./images/icons.svg#icon-3-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+
+                  <li class="social-link">
+                    <a href="#">
+                      <svg class="social-icon" aria-label="linkedin">
+                        <use href="./images/icons.svg#icon-4-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- specialization -->
+      <section class="section clients">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+
+          <ul class="clients-list">
+            <li class="client-item">
+              <a href="#">
+                <svg class="client-icon" aria-lavel="переход на сайт компании yaco">
+                  <use href="./images/icons.svg#icon-1-yaco"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="client-item">
+              <a href="#">
+                <svg class="client-icon" aria-lavel="переход на сайт компании TLH">
+                  <use href="./images/icons.svg#icon-2-tlh"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="client-item">
+              <a href="#">
+                <svg class="client-icon" aria-lavel="переход на сайт компании Company">
+                  <use href="./images/icons.svg#icon-3-company"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="client-item">
+              <a href="#">
+                <svg class="client-icon" aria-lavel="переход на сайт компании Foster Peter">
+                  <use href="./images/icons.svg#icon-4-foster"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="client-item">
+              <a href="#">
+                <svg class="client-icon" aria-lavel="переход на сайт компании Brand">
+                  <use href="./images/icons.svg#icon-5-brand"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="client-item">
+              <a href="#">
+                <svg class="client-icon" aria-lavel="переход на сайт компании Tag Line">
+                  <use href="./images/icons.svg#icon-6-tlc"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -180,6 +411,43 @@
 
             <li class="footer-contact-item">
               <a class="footer-contact-link" href="tel:+380991111111">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+
+        <p class="address-socials-text">присоединяйтесь</p>
+        <address class="address-socials">
+          <ul class="social-list">
+            <li class="social-link">
+              <a href="#">
+                <svg class="social-icon" aria-label="instagram">
+                  <use href="./images/icons.svg#icon-1-instagram"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="social-link">
+              <a href="#">
+                <svg class="social-icon" aria-label="twitter">
+                  <use href="./images/icons.svg#icon-2-twitter"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="social-link">
+              <a href="#">
+                <svg class="social-icon" aria-label="facebook">
+                  <use href="./images/icons.svg#icon-3-facebook"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="social-link">
+              <a href="#">
+                <svg class="social-icon" aria-label="linkedin">
+                  <use href="./images/icons.svg#icon-4-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </address>
