--- a/index.html
+++ b/index.html
@@ -390,67 +390,71 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo" href="./index.html"><span class="axcent">Web</span>Studio</a>
+      <div class="container footer-flex">
+        <div>
+          <a class="footer-logo" href="./index.html"><span class="axcent">Web</span>Studio</a>
 
-        <address class="address">
-          <ul class="footer-address-list">
-            <li class="footer-address-item">
-              <a
-                class="footer-address-link"
-                href="https://goo.gl/maps/piqngm7oDQpEDh6u6"
-                target="_blank"
-                rel="noopener nofollow noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
+          <address class="address">
+            <ul class="footer-address-list">
+              <li class="footer-address-item">
+                <a
+                  class="footer-address-link"
+                  href="https://goo.gl/maps/piqngm7oDQpEDh6u6"
+                  target="_blank"
+                  rel="noopener nofollow noreferrer"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
 
-            <li class="footer-contact-item">
-              <a class="footer-contact-link" href="mailto:info@example.com">info@example.com</a>
-            </li>
+              <li class="footer-contact-item">
+                <a class="footer-contact-link" href="mailto:info@example.com">info@example.com</a>
+              </li>
 
-            <li class="footer-contact-item">
-              <a class="footer-contact-link" href="tel:+380991111111">+38 099 111 11 11</a>
-            </li>
-          </ul>
-        </address>
+              <li class="footer-contact-item">
+                <a class="footer-contact-link" href="tel:+380991111111">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
 
-        <p class="address-socials-text">присоединяйтесь</p>
-        <address class="address-socials">
-          <ul class="social-list">
-            <li class="social-link">
-              <a href="#">
-                <svg class="social-icon" aria-label="instagram">
-                  <use href="./images/icons.svg#icon-1-instagram"></use>
-                </svg>
-              </a>
-            </li>
+        <div>
+          <p class="address-socials-text">присоединяйтесь</p>
+          <address class="address-socials">
+            <ul class="social-list">
+              <li class="social-link">
+                <a href="#">
+                  <svg class="social-icon" aria-label="instagram">
+                    <use href="./images/icons.svg#icon-1-instagram"></use>
+                  </svg>
+                </a>
+              </li>
 
-            <li class="social-link">
-              <a href="#">
-                <svg class="social-icon" aria-label="twitter">
-                  <use href="./images/icons.svg#icon-2-twitter"></use>
-                </svg>
-              </a>
-            </li>
+              <li class="social-link">
+                <a href="#">
+                  <svg class="social-icon" aria-label="twitter">
+                    <use href="./images/icons.svg#icon-2-twitter"></use>
+                  </svg>
+                </a>
+              </li>
 
-            <li class="social-link">
-              <a href="#">
-                <svg class="social-icon" aria-label="facebook">
-                  <use href="./images/icons.svg#icon-3-facebook"></use>
-                </svg>
-              </a>
-            </li>
+              <li class="social-link">
+                <a href="#">
+                  <svg class="social-icon" aria-label="facebook">
+                    <use href="./images/icons.svg#icon-3-facebook"></use>
+                  </svg>
+                </a>
+              </li>
 
-            <li class="social-link">
-              <a href="#">
-                <svg class="social-icon" aria-label="linkedin">
-                  <use href="./images/icons.svg#icon-4-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </address>
+              <li class="social-link">
+                <a href="#">
+                  <svg class="social-icon" aria-label="linkedin">
+                    <use href="./images/icons.svg#icon-4-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </address>
+        </div>
       </div>
     </footer>
   </body>
