--- a/index.html
+++ b/index.html
@@ -167,32 +167,32 @@
 
               <div class="social-list-container">
                 <ul class="social-list">
-                  <li class="social-link">
-                    <a href="#">
+                  <li class="social-link-item">
+                    <a href="#" class="social-link">
                       <svg class="social-icon" aria-label="instagram">
                         <use href="./images/icons.svg#icon-1-instagram"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-link">
-                    <a href="#">
+                  <li class="social-link-item">
+                    <a href="#" class="social-link">
                       <svg class="social-icon" aria-label="twitter">
                         <use href="./images/icons.svg#icon-2-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-link">
-                    <a href="#">
+                  <li class="social-link-item">
+                    <a href="#" class="social-link">
                       <svg class="social-icon" aria-label="facebook">
                         <use href="./images/icons.svg#icon-3-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-link">
-                    <a href="#">
+                  <li class="social-link-item">
+                    <a href="#" class="social-link">
                       <svg class="social-icon" aria-label="linkedin">
                         <use href="./images/icons.svg#icon-4-linkedin"></use>
                       </svg>
@@ -209,32 +209,32 @@
 
               <div class="social-list-container">
                 <ul class="social-list">
-                  <li class="social-link">
-                    <a href="#">
+                  <li class="social-link-item">
+                    <a href="#" class="social-link">
                       <svg class="social-icon" aria-label="instagram">
                         <use href="./images/icons.svg#icon-1-instagram"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-link">
-                    <a href="#">
+                  <li class="social-link-item">
+                    <a href="#" class="social-link">
                       <svg class="social-icon" aria-label="twitter">
                         <use href="./images/icons.svg#icon-2-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-link">
-                    <a href="#">
+                  <li class="social-link-item">
+                    <a href="#" class="social-link">
                       <svg class="social-icon" aria-label="facebook">
                         <use href="./images/icons.svg#icon-3-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-link">
-                    <a href="#">
+                  <li class="social-link-item">
+                    <a href="#" class="social-link">
                       <svg class="social-icon" aria-label="linkedin">
                         <use href="./images/icons.svg#icon-4-linkedin"></use>
                       </svg>
@@ -251,32 +251,32 @@
 
               <div class="social-list-container">
                 <ul class="social-list">
-                  <li class="social-link">
-                    <a href="#">
+                  <li class="social-link-item">
+                    <a href="#" class="social-link">
                       <svg class="social-icon" aria-label="instagram">
                         <use href="./images/icons.svg#icon-1-instagram"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-link">
-                    <a href="#">
+                  <li class="social-link-item">
+                    <a href="#" class="social-link">
                       <svg class="social-icon" aria-label="twitter">
                         <use href="./images/icons.svg#icon-2-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-link">
-                    <a href="#">
+                  <li class="social-link-item">
+                    <a href="#" class="social-link">
                       <svg class="social-icon" aria-label="facebook">
                         <use href="./images/icons.svg#icon-3-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-link">
-                    <a href="#">
+                  <li class="social-link-item">
+                    <a href="#" class="social-link">
                       <svg class="social-icon" aria-label="linkedin">
                         <use href="./images/icons.svg#icon-4-linkedin"></use>
                       </svg>
@@ -293,32 +293,32 @@
 
               <div class="social-list-container">
                 <ul class="social-list">
-                  <li class="social-link">
-                    <a href="#">
+                  <li class="social-link-item">
+                    <a href="#" class="social-link">
                       <svg class="social-icon" aria-label="instagram">
                         <use href="./images/icons.svg#icon-1-instagram"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-link">
-                    <a href="#">
+                  <li class="social-link-item">
+                    <a href="#" class="social-link">
                       <svg class="social-icon" aria-label="twitter">
                         <use href="./images/icons.svg#icon-2-twitter"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-link">
-                    <a href="#">
+                  <li class="social-link-item">
+                    <a href="#" class="social-link">
                       <svg class="social-icon" aria-label="facebook">
                         <use href="./images/icons.svg#icon-3-facebook"></use>
                       </svg>
                     </a>
                   </li>
 
-                  <li class="social-link">
-                    <a href="#">
+                  <li class="social-link-item">
+                    <a href="#" class="social-link">
                       <svg class="social-icon" aria-label="linkedin">
                         <use href="./images/icons.svg#icon-4-linkedin"></use>
                       </svg>
@@ -331,14 +331,14 @@
         </div>
       </section>
 
-      <!-- specialization -->
+      <!-- clients -->
       <section class="section clients">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
 
           <ul class="clients-list">
             <li class="client-item">
-              <a href="#">
+              <a href="#" class="client-link">
                 <svg class="client-icon" aria-lavel="переход на сайт компании yaco">
                   <use href="./images/icons.svg#icon-1-yaco"></use>
                 </svg>
@@ -346,7 +346,7 @@
             </li>
 
             <li class="client-item">
-              <a href="#">
+              <a href="#" class="client-link">
                 <svg class="client-icon" aria-lavel="переход на сайт компании TLH">
                   <use href="./images/icons.svg#icon-2-tlh"></use>
                 </svg>
@@ -354,7 +354,7 @@
             </li>
 
             <li class="client-item">
-              <a href="#">
+              <a href="#" class="client-link">
                 <svg class="client-icon" aria-lavel="переход на сайт компании Company">
                   <use href="./images/icons.svg#icon-3-company"></use>
                 </svg>
@@ -362,7 +362,7 @@
             </li>
 
             <li class="client-item">
-              <a href="#">
+              <a href="#" class="client-link">
                 <svg class="client-icon" aria-lavel="переход на сайт компании Foster Peter">
                   <use href="./images/icons.svg#icon-4-foster"></use>
                 </svg>
@@ -370,7 +370,7 @@
             </li>
 
             <li class="client-item">
-              <a href="#">
+              <a href="#" class="client-link">
                 <svg class="client-icon" aria-lavel="переход на сайт компании Brand">
                   <use href="./images/icons.svg#icon-5-brand"></use>
                 </svg>
@@ -378,7 +378,7 @@
             </li>
 
             <li class="client-item">
-              <a href="#">
+              <a href="#" class="client-link">
                 <svg class="client-icon" aria-lavel="переход на сайт компании Tag Line">
                   <use href="./images/icons.svg#icon-6-tlc"></use>
                 </svg>
@@ -391,7 +391,7 @@
 
     <footer class="footer">
       <div class="container footer-flex">
-        <div>
+        <div class="address-container">
           <a class="footer-logo" href="./index.html"><span class="axcent">Web</span>Studio</a>
 
           <address class="address">
@@ -418,42 +418,42 @@
         </div>
 
         <div>
-          <p class="address-socials-text">присоединяйтесь</p>
-          <address class="address-socials">
+          <p class="socials-text">присоединяйтесь</p>
+          <div>
             <ul class="social-list">
-              <li class="social-link">
-                <a href="#">
+              <li class="social-link-item">
+                <a href="#" class="social-link footer-socials">
                   <svg class="social-icon" aria-label="instagram">
                     <use href="./images/icons.svg#icon-1-instagram"></use>
                   </svg>
                 </a>
               </li>
 
-              <li class="social-link">
-                <a href="#">
+              <li class="social-link-item">
+                <a href="#" class="social-link footer-socials">
                   <svg class="social-icon" aria-label="twitter">
                     <use href="./images/icons.svg#icon-2-twitter"></use>
                   </svg>
                 </a>
               </li>
 
-              <li class="social-link">
-                <a href="#">
+              <li class="social-link-item">
+                <a href="#" class="social-link footer-socials">
                   <svg class="social-icon" aria-label="facebook">
                     <use href="./images/icons.svg#icon-3-facebook"></use>
                   </svg>
                 </a>
               </li>
 
-              <li class="social-link">
-                <a href="#">
+              <li class="social-link-item">
+                <a href="#" class="social-link footer-socials">
                   <svg class="social-icon" aria-label="linkedin">
                     <use href="./images/icons.svg#icon-4-linkedin"></use>
                   </svg>
                 </a>
               </li>
             </ul>
-          </address>
+          </div>
         </div>
       </div>
     </footer>
