--- a/portfolio.html
+++ b/portfolio.html
@@ -74,9 +74,10 @@
                   alt="страница веб-сайта на экране ноутбука"
                   width="370"
                   height="294"
-              /></a>
-              <h2 class="case-title">Технокряк</h2>
-              <p class="case-text">Веб-сайт</p>
+                />
+                <h2 class="case-title">Технокряк</h2>
+                <p class="case-text">Веб-сайт</p>
+              </a>
             </li>
 
             <li class="case-item">
@@ -86,9 +87,10 @@
                   alt="два спортсмена играют в баскетбол"
                   width="370"
                   height="294"
-              /></a>
-              <h2 class="case-title">Постер New Orlean vs Golden Star</h2>
-              <p class="case-text">Дизайн</p>
+                />
+                <h2 class="case-title">Постер New Orlean vs Golden Star</h2>
+                <p class="case-text">Дизайн</p>
+              </a>
             </li>
 
             <li class="case-item">
@@ -98,25 +100,26 @@
                   alt="эмблема морского ресторана"
                   width="370"
                   height="294"
-              /></a>
-              <h2 class="case-title">Ресторан Seafood</h2>
-              <p class="case-text">Приложение</p>
+                />
+                <h2 class="case-title">Ресторан Seafood</h2>
+                <p class="case-text">Приложение</p>
+              </a>
             </li>
 
             <li class="case-item">
               <a href="#" class="case-link"
-                ><img src="./images/cases/case-4.jpg" alt="наушники" width="370" height="294"
-              /></a>
-              <h2 class="case-title">Проект Prime</h2>
-              <p class="case-text">Маркетинг</p>
+                ><img src="./images/cases/case-4.jpg" alt="наушники" width="370" height="294" />
+                <h2 class="case-title">Проект Prime</h2>
+                <p class="case-text">Маркетинг</p>
+              </a>
             </li>
 
             <li class="case-item">
               <a href="#" class="case-link"
-                ><img src="./images/cases/case-5.jpg" alt="две коробки" width="370" height="294"
-              /></a>
-              <h2 class="case-title">Проект Boxes</h2>
-              <p class="case-text">Приложение</p>
+                ><img src="./images/cases/case-5.jpg" alt="две коробки" width="370" height="294" />
+                <h2 class="case-title">Проект Boxes</h2>
+                <p class="case-text">Приложение</p>
+              </a>
             </li>
 
             <li class="case-item">
@@ -126,9 +129,10 @@
                   alt="страница веб-сайта на экране монитора"
                   width="370"
                   height="294"
-              /></a>
-              <h2 class="case-title">Inspiration has no Borders</h2>
-              <p class="case-text">Веб-сайт</p>
+                />
+                <h2 class="case-title">Inspiration has no Borders</h2>
+                <p class="case-text">Веб-сайт</p>
+              </a>
             </li>
 
             <li class="case-item">
@@ -138,17 +142,18 @@
                   alt="журнал на развороте"
                   width="370"
                   height="294"
-              /></a>
-              <h2 class="case-title">Издание Limited Edition</h2>
-              <p class="case-text">Дизайн</p>
+                />
+                <h2 class="case-title">Издание Limited Edition</h2>
+                <p class="case-text">Дизайн</p>
+              </a>
             </li>
 
             <li class="case-item">
               <a href="#" class="case-link"
-                ><img src="./images/cases/case-8.jpg" alt="ярлык" width="370" height="294"
-              /></a>
-              <h2 class="case-title">Проект LAB</h2>
-              <p class="case-text">Маркетинг</p>
+                ><img src="./images/cases/case-8.jpg" alt="ярлык" width="370" height="294" />
+                <h2 class="case-title">Проект LAB</h2>
+                <p class="case-text">Маркетинг</p>
+              </a>
             </li>
 
             <li class="case-item">
@@ -158,9 +163,10 @@
                   alt="страница веб-сайта на экране ноутбука"
                   width="370"
                   height="294"
-              /></a>
-              <h2 class="case-title">Growing Business</h2>
-              <p class="case-text">Приложение</p>
+                />
+                <h2 class="case-title">Growing Business</h2>
+                <p class="case-text">Приложение</p>
+              </a>
             </li>
           </ul>
         </div>
@@ -168,30 +174,71 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo" href="./index.html"><span class="axcent">Web</span>Studio</a>
+      <div class="container footer-flex">
+        <div class="address-container">
+          <a class="footer-logo" href="./index.html"><span class="axcent">Web</span>Studio</a>
 
-        <address class="address">
-          <ul class="footer-address-list">
-            <li class="footer-address-item">
-              <a
-                class="footer-address-link"
-                href="https://goo.gl/maps/piqngm7oDQpEDh6u6"
-                target="_blank"
-                rel="noopener nofollow noreferrer"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
+          <address class="address">
+            <ul class="footer-address-list">
+              <li class="footer-address-item">
+                <a
+                  class="footer-address-link"
+                  href="https://goo.gl/maps/piqngm7oDQpEDh6u6"
+                  target="_blank"
+                  rel="noopener nofollow noreferrer"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
 
-            <li class="footer-contact-item">
-              <a class="footer-contact-link" href="mailto:info@example.com">info@example.com</a>
-            </li>
+              <li class="footer-contact-item">
+                <a class="footer-contact-link" href="mailto:info@example.com">info@example.com</a>
+              </li>
 
-            <li class="footer-contact-item">
-              <a class="footer-contact-link" href="tel:+380991111111">+38 099 111 11 11</a>
-            </li>
-          </ul>
-        </address>
+              <li class="footer-contact-item">
+                <a class="footer-contact-link" href="tel:+380991111111">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+
+        <div>
+          <p class="socials-text">присоединяйтесь</p>
+          <div>
+            <ul class="social-list">
+              <li class="social-link-item">
+                <a href="#" class="social-link footer-socials">
+                  <svg class="social-icon" aria-label="instagram">
+                    <use href="./images/icons.svg#icon-1-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="social-link-item">
+                <a href="#" class="social-link footer-socials">
+                  <svg class="social-icon" aria-label="twitter">
+                    <use href="./images/icons.svg#icon-2-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="social-link-item">
+                <a href="#" class="social-link footer-socials">
+                  <svg class="social-icon" aria-label="facebook">
+                    <use href="./images/icons.svg#icon-3-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+
+              <li class="social-link-item">
+                <a href="#" class="social-link footer-socials">
+                  <svg class="social-icon" aria-label="linkedin">
+                    <use href="./images/icons.svg#icon-4-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
