--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
           <ul class="clients-list">
             <li class="client-item">
               <a href="#" class="client-link">
-                <svg class="client-icon" aria-lavel="переход на сайт компании yaco">
+                <svg class="client-icon" aria-label="переход на сайт компании yaco">
                   <use href="./images/icons.svg#icon-1-yaco"></use>
                 </svg>
               </a>
@@ -347,7 +347,7 @@
 
             <li class="client-item">
               <a href="#" class="client-link">
-                <svg class="client-icon" aria-lavel="переход на сайт компании TLH">
+                <svg class="client-icon" aria-label="переход на сайт компании TLH">
                   <use href="./images/icons.svg#icon-2-tlh"></use>
                 </svg>
               </a>
@@ -355,7 +355,7 @@
 
             <li class="client-item">
               <a href="#" class="client-link">
-                <svg class="client-icon" aria-lavel="переход на сайт компании Company">
+                <svg class="client-icon" aria-label="переход на сайт компании Company">
                   <use href="./images/icons.svg#icon-3-company"></use>
                 </svg>
               </a>
@@ -363,7 +363,7 @@
 
             <li class="client-item">
               <a href="#" class="client-link">
-                <svg class="client-icon" aria-lavel="переход на сайт компании Foster Peter">
+                <svg class="client-icon" aria-label="переход на сайт компании Foster Peter">
                   <use href="./images/icons.svg#icon-4-foster"></use>
                 </svg>
               </a>
@@ -371,7 +371,7 @@
 
             <li class="client-item">
               <a href="#" class="client-link">
-                <svg class="client-icon" aria-lavel="переход на сайт компании Brand">
+                <svg class="client-icon" aria-label="переход на сайт компании Brand">
                   <use href="./images/icons.svg#icon-5-brand"></use>
                 </svg>
               </a>
@@ -379,7 +379,7 @@
 
             <li class="client-item">
               <a href="#" class="client-link">
-                <svg class="client-icon" aria-lavel="переход на сайт компании Tag Line">
+                <svg class="client-icon" aria-label="переход на сайт компании Tag Line">
                   <use href="./images/icons.svg#icon-6-tlc"></use>
                 </svg>
               </a>
