--- a/portfolio.html
+++ b/portfolio.html
@@ -35,10 +35,20 @@
 
         <ul class="header-contact-list">
           <li class="item">
-            <a class="nav-link contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="nav-link contact-link" href="mailto:info@devstudio.com">
+              <svg class="contact-link-icon" aria-hidden="true">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
           <li class="item">
-            <a class="nav-link contact-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="nav-link contact-link" href="tel:+380961111111">
+              <svg class="contact-link-icon smartfone" aria-hidden="true">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
